wire up new endpint for job pausing
